--- a/Analytics/sbbol_activities_users.ipynb
+++ b/Analytics/sbbol_activities_users.ipynb
@@ -292,119 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sbbolUserId</th>\n",
-       "      <th>sessionDate</th>\n",
-       "      <th>month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3c25f0b3-847b-1d5b-e054-90e2ba9a7f6c</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50fab586-e07c-4cde-a4fb-a4fd3ee0438d</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>68120f9e-64b4-4f0a-b291-25eaed352c0c</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0336f815-522e-4e65-a63f-dceb6b2357ad</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>89aa7a8e-f582-4058-9d27-52cfa195d44c</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>bae72cb4-05d7-4a70-8747-2a7be3d452e8</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1f46d587-433d-4947-9e49-39bc038c7ade</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>3c25f07c-f499-fc84-e054-90e2ba85d0c8</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3c25f0b6-07b6-1d5b-e054-90e2ba9a7f6c</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2256191f-6aeb-455f-98ec-199ea4a18bda</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            sbbolUserId sessionDate      month\n",
-       "0  3c25f0b3-847b-1d5b-e054-90e2ba9a7f6c  2021-04-30 2021-04-01\n",
-       "1  50fab586-e07c-4cde-a4fb-a4fd3ee0438d  2021-04-30 2021-04-01\n",
-       "2  68120f9e-64b4-4f0a-b291-25eaed352c0c  2021-04-30 2021-04-01\n",
-       "3  0336f815-522e-4e65-a63f-dceb6b2357ad  2021-04-30 2021-04-01\n",
-       "4  89aa7a8e-f582-4058-9d27-52cfa195d44c  2021-04-30 2021-04-01\n",
-       "5  bae72cb4-05d7-4a70-8747-2a7be3d452e8  2021-04-30 2021-04-01\n",
-       "6  1f46d587-433d-4947-9e49-39bc038c7ade  2021-04-30 2021-04-01\n",
-       "7  3c25f07c-f499-fc84-e054-90e2ba85d0c8  2021-04-30 2021-04-01\n",
-       "8  3c25f0b6-07b6-1d5b-e054-90e2ba9a7f6c  2021-04-30 2021-04-01\n",
-       "9  2256191f-6aeb-455f-98ec-199ea4a18bda  2021-04-30 2021-04-01"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sbbol_users_visit_2021_month.show()"
    ]
@@ -753,78 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sbbolUserId</th>\n",
-       "      <th>mean_visit_month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3c25f088-6462-fc84-e054-90e2ba85d0c8</td>\n",
-       "      <td>1.545455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>24cc33cc-bab9-40c9-b21d-f6fe67d0a29c</td>\n",
-       "      <td>9.636364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4d5340e9-c223-4f35-b077-3b1e646910fb</td>\n",
-       "      <td>5.090909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50cdc60f-02c0-4e8b-bf77-e840ce58deea</td>\n",
-       "      <td>14.272727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3c25f0a7-f06f-1d5b-e054-90e2ba9a7f6c</td>\n",
-       "      <td>13.545455</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            sbbolUserId  mean_visit_month\n",
-       "0  3c25f088-6462-fc84-e054-90e2ba85d0c8          1.545455\n",
-       "1  24cc33cc-bab9-40c9-b21d-f6fe67d0a29c          9.636364\n",
-       "2  4d5340e9-c223-4f35-b077-3b1e646910fb          5.090909\n",
-       "3  50cdc60f-02c0-4e8b-bf77-e840ce58deea         14.272727\n",
-       "4  3c25f0a7-f06f-1d5b-e054-90e2ba9a7f6c         13.545455"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year_mean_stats_pd.head()"
    ]
@@ -999,18 +820,11 @@
     "%%time\n",
     "hive.sql(VISIT_SQL_QUERY).show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Сколько раз заходил - сессий, "
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1024,9 +838,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
