--- a/Analytics/Ckeck_main_products.ipynb
+++ b/Analytics/Ckeck_main_products.ipynb
@@ -114,130 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>inn</th>\n",
-       "      <th>prod_cd_asup</th>\n",
-       "      <th>ratings</th>\n",
-       "      <th>load_dt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>E_INV</td>\n",
-       "      <td>0.7311</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>KORPKARTA</td>\n",
-       "      <td>0.7183</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>RABOTA_RU</td>\n",
-       "      <td>0.6724</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>SPPU</td>\n",
-       "      <td>0.6532</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>KREDIT</td>\n",
-       "      <td>0.6437</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>ZARPLATA</td>\n",
-       "      <td>0.6303</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>MYBUCH_ONLINE_SSO</td>\n",
-       "      <td>0.6069</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>MERCHANT-ACQUIRING</td>\n",
-       "      <td>0.5985</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>CREDIT_CARD</td>\n",
-       "      <td>0.5953</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0012345678</td>\n",
-       "      <td>BIP</td>\n",
-       "      <td>0.5887</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          inn        prod_cd_asup  ratings     load_dt\n",
-       "0  0012345678               E_INV   0.7311  2022-02-10\n",
-       "1  0012345678           KORPKARTA   0.7183  2022-02-10\n",
-       "2  0012345678           RABOTA_RU   0.6724  2022-02-10\n",
-       "3  0012345678                SPPU   0.6532  2022-02-10\n",
-       "4  0012345678              KREDIT   0.6437  2022-02-10\n",
-       "5  0012345678            ZARPLATA   0.6303  2022-02-10\n",
-       "6  0012345678   MYBUCH_ONLINE_SSO   0.6069  2022-02-10\n",
-       "7  0012345678  MERCHANT-ACQUIRING   0.5985  2022-02-10\n",
-       "8  0012345678         CREDIT_CARD   0.5953  2022-02-10\n",
-       "9  0012345678                 BIP   0.5887  2022-02-10"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "story_ratings_sbx.show()"
    ]
@@ -647,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -661,9 +540,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
