--- a/Analytics/SBBOL_MODEL_STATS.ipynb
+++ b/Analytics/SBBOL_MODEL_STATS.ipynb
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "ld=load.Loader(init_dsn=True, encoding='cp1251',  sep=',')\n",
-    "db = load.OracleDB('tech_iskra[iskra]', 'Uthvfy123', ld._get_dsn('iskra4')) \n",
+    "db = load.OracleDB('', '', ld._get_dsn('')) \n",
     "db.connect()"
    ]
   },
