--- a/Research and metrics/insight_reccomendations_table.ipynb
+++ b/Research and metrics/insight_reccomendations_table.ipynb
@@ -488,8 +488,8 @@
     "################################## Iskra ##################################\n",
     "ISKRA = 'iskra4'\n",
     "##-----------------------------------------------------------------##\n",
-    "ISKRA_LOGIN = 'tech_iskra[iskra]'\n",
-    "ISKRA_PASS = 'Uthvfy123'\n",
+    "ISKRA_LOGIN = ''\n",
+    "ISKRA_PASS = ''\n",
     "##-----------------------------------------------------------------##\n",
     "ISKRA_BATCH_SIZE = 700000\n",
     "#####################################################################\n",
